feat: :lipstick: 添加汉字支持

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -25,6 +25,16 @@
 body {
   font-size: 1rem;
   font-family:
+    Microsoft Yahei,
+    SimSun,
+    SimHei,
+    KaiTi,
+    NSimSun,
+    PingFang SC,
+    STHeiti,
+    STSong,
+    Source Han Sans CN,
+    Source Han Serif SC,
     Sentinel SSm A,
     Sentinel SSm B,
     system-ui,
