--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -1,69 +1,74 @@
 .c-tags__label {
-    margin-bottom: 6px;
-    text-align: center;
+  margin-bottom: 6px;
+  text-align: center;
 }
 
 .c-nav {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: var(--text-sm);
-    font-weight: 600;
-    font-size: 1.2rem;
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: var(--text-sm);
+  font-weight: 600;
+  font-size: 1.2rem;
 }
 
 .c-nav__list {
-    display: flex;
-    align-items: center;
-    gap: 15px;
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
 
 .c-nav__logo svg {
-    box-shadow: var(--shadow-md);
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  box-shadow: var(--shadow-md);
 }
 
 .c-nav__home {
-    display: flex;
-    align-items: center;
-    color: var(--color-grey-900);
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  color: var(--color-grey-900);
+  text-decoration: none;
 
-    &:hover, &:focus {
-        text-decoration: none;
-    }
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
 }
 
 .c-nav__home-text {
-    margin-left: 18px;
+  margin-left: 18px;
 
-    @media all and (max-width: 576px) {
-        position:absolute;
-        left:-10000px;
-        top:auto;
-        width:1px;
-        height:1px;
-        overflow:hidden;
-    }
+  @media all and (max-width: 576px) {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+  }
 }
 
 .c-nav__nav-item {
-    padding: 4px 8px;
-    display: flex;
-    color: var(--color-grey-900);
+  padding: 4px 8px;
+  display: flex;
+  color: var(--color-grey-900);
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
     text-decoration: none;
-
-    &:hover, &:focus {
-        text-decoration: none;
-        background-color: var(--color-grey-900);
-        color: var(--color-white);
-        border-radius: 6px;
-    }
-}
-
-.c-nav__nav-item--active {
     background-color: var(--color-grey-900);
     color: var(--color-white);
     border-radius: 6px;
+  }
+}
+
+.c-nav__nav-item--active {
+  background-color: var(--color-grey-900);
+  color: var(--color-white);
+  border-radius: 6px;
 }
