--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -27,7 +27,8 @@
     {% include "css/main.css" %}
     {% include "css/main-tailwind.css" %}
   </style>
-  <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script>
+  {# <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script> #}
+  <script src="https://cdn.staticfile.org/alpinejs/3.13.0/cdn.min.js" defer></script>
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
 </head>
 <body class="{{ bodyClass }}">
