--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -28,6 +28,9 @@
     {# <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.8.2/dist/alpine.min.js" defer></script> #}
     <script src="https://cdn.staticfile.org/alpinejs/3.13.0/cdn.min.js" defer></script>
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js" defer></script>
+    {# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.10.0/cdn/themes/light.css"/> #}
+    <link rel="stylesheet" href="https://npm.webcache.cn/@shoelace-style/shoelace@2.10.0/cdn/themes/light.css"/>
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.10.0/cdn/shoelace-autoloader.js"></script>
   </head>
   <body class="{{ bodyClass }}">
     <header class="l-header">{% include "components/navigation.njk" %}</header>
