feat: :sparkles: 实现导航栏基础结构

--- a/src/tailwindcss/main-tailwind.css
+++ b/src/tailwindcss/main-tailwind.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  sl-icon-button::part(base) {
+    @apply text-white;
+  }
+
+  sl-icon-button::part(base):hover,
+  sl-icon-button::part(base):focus {
+    color: blue;
+  }
+
+  sl-icon-button::part(base):active {
+    color: #960077;
+  }
+}
