--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -33,7 +33,27 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.10.0/cdn/shoelace-autoloader.js"></script>
   </head>
   <body class="{{ bodyClass }}">
-    <header class="l-header">{% include "components/navigation.njk" %}</header>
+    <header>
+      <nav>
+        <ul class="flex">
+          <li>
+            <sl-icon-button name="list" label="Navigation" style="font-size: 1.8rem;"></sl-icon-button>
+          </li>
+          <li class="grow">
+            <a href="/" class="flex items-center justify-center h-full">
+              <span class="text-center text-xl text-white">{{site.brand}}</span></a>
+          </li>
+          <li>
+            <sl-icon-button name="search" label="Search" style="font-size: 1.8rem;"></sl-icon-button>
+          </li>
+          <li>
+            <sl-icon-button name="bag-heart" label="Shopping Bag" style="font-size: 1.8rem;"></sl-icon-button>
+          </li>
+
+          {# <li>{% include "components/navigation.njk" %}</li> #}
+        </ul>
+      </nav>
+    </header>
     <main>
       {% block content %}
         <div class="l-container">
