--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -1,3 +1,4 @@
+{#
 <nav class="c-nav">
   <ul class="c-nav__list">
     {% for navItem in nav.items %}
@@ -25,4 +26,23 @@
       {% include "components/search.njk" %}
     </div>
   </div>
+</nav>
+#}
+
+<nav>
+  <ul class="flex">
+    <li>
+      <sl-icon-button name="list" label="Navigation" style="font-size: 1.8rem;"></sl-icon-button>
+    </li>
+    <li class="grow">
+      <a href="/" class="flex items-center justify-center h-full">
+        <span class="text-center text-xl text-white">{{site.brand}}</span></a>
+    </li>
+    <li>
+      <sl-icon-button name="search" label="Search" style="font-size: 1.8rem;"></sl-icon-button>
+    </li>
+    <li>
+      <sl-icon-button name="bag-heart" label="Shopping Bag" style="font-size: 1.8rem;"></sl-icon-button>
+    </li>
+  </ul>
 </nav>
