--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -33,7 +33,8 @@
   <nav>
     <ul class="flex">
       <li>
-        <sl-icon-button name="list" label="Navigation" style="font-size: 1.8rem;" @click="openDrawer = !openDrawer;openDrawer ? $refs.navigation.show() : $refs.navigation.hide()"></sl-icon-button>
+        <sl-icon-button name="list" label="NavigationOpen" style="font-size: 1.8rem;" x-show="!openDrawer" @click="openDrawer = !openDrawer;openDrawer ? $refs.navigation.show() : $refs.navigation.hide()"></sl-icon-button>
+        <sl-icon-button name="x-lg" label="NavigationClose" style="font-size: 1.8rem;" x-show="openDrawer" x-cloak @click="openDrawer = !openDrawer;openDrawer ? $refs.navigation.show() : $refs.navigation.hide()"></sl-icon-button>
       </li>
       <li class="grow">
         <a href="/" class="flex items-center justify-center h-full">
