--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -30,7 +30,7 @@
 #}
 <div x-data="{openDrawer: false}" :class="openDrawer && 'fixed h-screen w-screen z-10 bg-white flex flex-col'">
 
-  <nav>
+  <nav :class="openDrawer ? 'nav-black' : 'nav-white'">
     <ul class="flex">
       <li>
         <sl-icon-button name="list" label="NavigationOpen" style="font-size: 1.8rem;" x-show="!openDrawer" @click="openDrawer = !openDrawer;openDrawer ? $refs.navigation.show() : $refs.navigation.hide()"></sl-icon-button>
@@ -38,7 +38,8 @@
       </li>
       <li class="grow">
         <a href="/" class="flex items-center justify-center h-full">
-          <span class="text-center text-xl text-white">{{site.brand}}</span></a>
+          <span class="text-center text-xl" :class="openDrawer ? 'text-black' : 'text-white'">{{site.brand}}</span>
+        </a>
       </li>
       <li>
         <sl-icon-button name="search" label="Search" style="font-size: 1.8rem;"></sl-icon-button>
