feat: :lipstick: 调整品牌字体样式

--- a/src/_includes/components/navigation.njk
+++ b/src/_includes/components/navigation.njk
@@ -38,7 +38,7 @@
       </li>
       <li class="grow">
         <a href="/" class="flex items-center justify-center h-full">
-          <span class="text-center text-xl" :class="openDrawer ? 'text-black' : 'text-white'">{{site.brand}}</span>
+          <span class="text-center text-2xl font-bold" :class="openDrawer ? 'text-black' : 'text-white'">{{site.brand}}</span>
         </a>
       </li>
       <li>
