fix: :fire: 移除无用的背景内容

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -4,6 +4,9 @@ bodyClass: c-home
 
 {% extends 'layouts/base.njk' %}
 
+{% block content %}{% endblock %}
+
+{#
 {% block content %}
   <section>
     <div class="l-container">
@@ -55,3 +58,4 @@ bodyClass: c-home
     </section>
   {% endif %}
 {% endblock %}
+#}
