--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -32,7 +32,8 @@
     <link rel="stylesheet" href="https://npm.webcache.cn/@shoelace-style/shoelace@2.10.0/cdn/themes/light.css"/>
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.10.0/cdn/shoelace-autoloader.js"></script>
   </head>
-  <body class="{{ bodyClass }}">
+  {# <body class="{{ bodyClass }}"> #}
+  <body>
     <header>
       {#
       <nav>
