feat: :lipstick: 确认跳转按钮定位

--- a/src/_includes/layouts/home.njk
+++ b/src/_includes/layouts/home.njk
@@ -12,7 +12,7 @@ bodyClass: c-home
         "",
         product.data.title,
         "100%" %}
-        <div class="absolute inset-1/2">
+        <div class="absolute inset-x-1/2 bottom-1/4">
           <p>hello</p>
         </div>
       </div>
